tests/sksl/errors/golden/GenericArgumentMismatch.glsl
### Compilation failed:

error: 1: no match for sin(int, int)
error: 2: no match for sin(bool)
2 errors
